--- a/getLeetCodeQns/package.json
+++ b/getLeetCodeQns/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.0.0"
+    "@google-cloud/functions-framework": "^3.0.0",
+    "axios": "^1.6.2",
+    "puppeteer": "^21.5.2"
   }
 }
