--- a/getLeetCodeQns/package.json
+++ b/getLeetCodeQns/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^3.0.0",
     "axios": "^1.6.2",
+    "firebase": "^10.6.0",
     "puppeteer": "^21.5.2"
   }
 }
