--- a/getQuestions/.vscode/launch.json
+++ b/getQuestions/.vscode/launch.json
@@ -7,7 +7,7 @@
         "functionName": "getQuestions",
         "region": "asia-southeast1",
         "gen": "GEN_2",
-        "revision": "getquestions-00003-gug",
+        "revision": "getquestions-00004-cis",
         "entryPoint": "helloHttp",
         "runtime": "nodejs20",
         "testInput": ""
